fixed colors to help with dark mode
Since we don't style the entire Algolia panel for dark mode, just leave fixed color values. And the search field should always be light

--- a/public/css/docsearch.css
+++ b/public/css/docsearch.css
@@ -1,5 +1,5 @@
 input#docsearch {
-  background: var(--g0) url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg fill='%23636363' viewBox='0 0 96 96' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle/%3E%3Cpath d='M54,0A42.051,42.051,0,0,0,12,42a41.5989,41.5989,0,0,0,8.48,25.0356L1.7578,85.7578a5.9994,5.9994,0,1,0,8.4844,8.4844L28.9644,75.52A41.5989,41.5989,0,0,0,54,84,42,42,0,0,0,54,0Zm0,72A30,30,0,1,1,84,42,30.0353,30.0353,0,0,1,54,72Z'/%3E%3C/svg%3E");
+  background: #fbfbfb url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg fill='%23636363' viewBox='0 0 96 96' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle/%3E%3Cpath d='M54,0A42.051,42.051,0,0,0,12,42a41.5989,41.5989,0,0,0,8.48,25.0356L1.7578,85.7578a5.9994,5.9994,0,1,0,8.4844,8.4844L28.9644,75.52A41.5989,41.5989,0,0,0,54,84,42,42,0,0,0,54,0Zm0,72A30,30,0,1,1,84,42,30.0353,30.0353,0,0,1,54,72Z'/%3E%3C/svg%3E");
   background-position: 0.5rem center;
   background-repeat: no-repeat;
   background-size: 1rem;
@@ -9,7 +9,7 @@ input#docsearch {
 }
 input#docsearch[type=search]:focus {
 	width: 12rem;
-	background-color: var(--bkg-color);
+	background-color: #fff;
 }
 
 input#docsearch::-webkit-search-decoration,
@@ -21,10 +21,6 @@ input#docsearch::-webkit-search-cancel-button {
   text-decoration: none;
 }
 
-/* Main category (eg. "Documentation") */
 .algolia-autocomplete .algolia-docsearch-suggestion--category-header {
-  color: var(--g8);
-  background-color: var(--g1);
-  border-left: 8px solid var(--g3);
-  padding: .8rem !important;
+  color: #484848;
 }
